<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:padding="10sp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:divider="@drawable/horizontal_divider"
        android:dividerPadding="20dp"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingTop="50dp"
        android:paddingEnd="30dp"
        android:paddingBottom="30dp"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/boggle_title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:alpha="1"
            android:fontFamily="@font/infinity_thin"
            android:gravity="center"
            android:text="@string/main_title_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:textSize="48sp" />

        <LinearLayout
            android:id="@+id/main_list_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button1"
                style="@style/Widget.Material3.Button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/infinity_regular"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:text="@string/main_button1_caption"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:backgroundTint="@color/white_faint"
                app:cornerRadius="50dp"
                app:icon="@drawable/button_circle"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/button2"
                style="@style/Widget.Material3.Button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/infinity_regular"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:text="@string/main_button2_caption"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:backgroundTint="@color/white_faint"
                app:cornerRadius="50dp"
                app:icon="@drawable/button_circle"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/button3"
                style="@style/Widget.Material3.Button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/infinity_regular"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:text="@string/main_button3_caption"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:backgroundTint="@color/white_faint"
                app:cornerRadius="50dp"
                app:icon="@drawable/button_circle"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/button4"
                style="@style/Widget.Material3.Button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/infinity_regular"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:text="@string/main_button4_caption"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:backgroundTint="@color/white_faint"
                app:cornerRadius="50dp"
                app:icon="@drawable/button_circle"
                app:iconPadding="0dp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>