<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:padding="10sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:divider="@drawable/horizontal_divider"
        android:dividerPadding="20dp"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingTop="50dp"
        android:paddingEnd="30dp"
        android:paddingBottom="30dp"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/boggle_title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:alpha="1"
            android:fontFamily="@font/infinity_thin"
            android:gravity="center"
            android:text="@string/server_title_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:textSize="48sp" />

        <LinearLayout
            android:id="@+id/server_list_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/server_ip_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="0dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/infinity_regular"
                android:text="@string/server_ip_text"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:drawableLeftCompat="@drawable/bullet_point" />

            <TextView
                android:id="@+id/server_ip_server"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/infinity_thin"
                android:text="@string/server_placeholder_text"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/server_ip_client"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/infinity_thin"
                android:text="@string/server_placeholder_text"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/server_time_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/infinity_regular"
                android:text="@string/server_time_text"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:drawableLeftCompat="@drawable/bullet_point" />

            <TextView
                android:id="@+id/server_time_server"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/infinity_thin"
                android:text="@string/server_placeholder_text"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/server_time_client"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/infinity_thin"
                android:text="@string/server_placeholder_text"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/server_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/infinity_regular"
                android:text="@string/server_name_text"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:drawableLeftCompat="@drawable/bullet_point" />

            <TextView
                android:id="@+id/server_your_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/infinity_thin"
                android:text="@string/server_placeholder_text"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/server_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/infinity_thin"
                android:text="@string/server_placeholder_text"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <Button
                android:id="@+id/location_button"
                style="@style/Widget.Material3.Button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="150dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/infinity_regular"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:text="@string/info_location_button_caption"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:backgroundTint="@color/white_faint"
                app:cornerRadius="50dp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>